tests/ui/privacy/sealed-traits/false-sealed-traits-note.stderr
error[E0277]: the trait bound `Struct: TraitA` is not satisfied
  --> $DIR/false-sealed-traits-note.rs:11:24
   |
LL | impl inner::TraitB for Struct {}
   |                        ^^^^^^ the trait `TraitA` is not implemented for `Struct`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/false-sealed-traits-note.rs:4:5
   |
LL |     pub trait TraitA {}
   |     ^^^^^^^^^^^^^^^^
note: required by a bound in `TraitB`
  --> $DIR/false-sealed-traits-note.rs:6:23
   |
LL |     pub trait TraitB: TraitA {}
   |                       ^^^^^^ required by this bound in `TraitB`
   = note: `TraitB` is a "sealed trait", because to implement it you also need to implement `inner::TraitA`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
